8152004: CTW crashes with failed assertion after 8150646 integration

Reviewed-by: kvn, neliasso